# jarvis

./: .gitignore  AGENTS.md  README.md  jarvis.py  jarvis_tui.py  launch.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
macOs/Jarvis/Jarvis/: JarvisMCPApp.swift
macOs/Jarvis/Jarvis.xcodeproj/: project.pbxproj
macOs/Jarvis/Jarvis/Models/: AppState.swift  GuardrailsStats.swift  Preset.swift  ServerConfig.swift
macOs/Jarvis/Jarvis/Services/: GuardrailsManager.swift  LogTailer.swift  LogViewerView.swift  ProcessManager.swift
macOs/Jarvis/Jarvis/Views/: ContentView.swift  GuardrailsView.swift  Jarvis.entitlements  MenuBarView.swift  PresetsView.swift  ServerDetailView.swift  SettingsView.swift
rust/: Cargo.toml
rust/guardrail/: Cargo.toml  README.md
rust/guardrail/src/: decode.rs  lib.rs  main.rs  model.rs  rescue.rs  respond.rs  retry.rs  validate.rs
rust/guardrail/tests/: guardrail.rs  inspection.rs  passthrough.rs
scripts/: build_guardrail_binary.sh  build_guardrail_binary_linux.sh  build_jarvis_binary.sh  build_jarvis_binary_linux.sh  download_guardrails_binary.sh
src/jarvis/: __main__.py  api.py  config.py  middleware.py  probe.py  search.py  tui.py
tests/unit/: test_search.py  test_skills.py
