[project]
name = "jarvis-mcp"
version = "0.1.0"
description = "MCP proxy that aggregates multiple MCP servers behind 2 synthetic tools"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "mcp>=1.0",
    "key-value>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
